tests/invalid/generated_binop_bitor_int_float/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: int = 1
    y: float = 1.0
    z = x | y
